# simulation_vkr_cli

./: .gitignore  CMakeLists.txt  build.sh  conf.json  conf_v1.json  conf_v2.json  conf_v4.json  example.csv  main  main.cpp  main.json  newconf_ref.json  old.csv  profile.cm  requirements.txt  setup.py  setup.pyold  test.ipynb  test.py
include/: components.hpp  config.hpp  delay.hpp  delayprovider.h  env.hpp  environment.h  event.h  event.hpp  factories.hpp  factory.hpp  mapping.hpp  model.hpp  node.h  node.hpp  orbit.h  orbit.hpp  processable.h  producer.hpp  request.hpp  router.hpp  statistic.h  stats.hpp  stream.h  stream.hpp  string_switch.hpp  system.h  utils.h  utils.hpp
q_analysis/: rq_system.py  utils.py
q_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
q_analysis/include/: delay.hpp  model.hpp  node.hpp  orbit.hpp  producer.hpp  reader.hpp  router.hpp  stream.hpp
q_analysis/src/: binding.cpp
research/: 1mln.csv  example_200k.xlsx  example_only_l_200k.csv  example_only_sigma_200k.csv  massif.out.27773  orb_size_wait_time.ipynb  rq_analysis.ipynb  rq_analysis_test.ipynb  run.py  run_h.py  test.csv  tres.html
research/results/: mod_0.1_0.05_1.6001.json  mod_0.1_0.05_1.7001000000000002.json  mod_0.1_0.05_1.8001000000000003.json  mod_0.1_0.05_1.9001000000000003.json  mod_0.1_0.05_2.0001000000000007.json  mod_0.1_0.05_2.1001000000000003.json  mod_0.1_0.05_2.200100000000001.json  mod_0.1_0.15000000000000002_1.6001.json  mod_0.1_0.15000000000000002_1.7001000000000002.json  mod_0.1_0.15000000000000002_1.8001000000000003.json  mod_0.1_0.15000000000000002_1.9001000000000003.json  mod_0.1_0.15000000000000002_2.0001000000000007.json  mod_0.1_0.15000000000000002_2.1001000000000003.json  mod_0.1_0.15000000000000002_2.200100000000001.json  mod_0.1_0.25000000000000006_1.6001.json  mod_0.1_0.25000000000000006_1.7001000000000002.json  mod_0.1_0.35000000000000003_1.6001.json  (+180 more)
rq_analysis/: __init__.py  simulation.py  utils.py
rq_simulation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: binding.cpp  delayprovider.cpp  environment.cpp  event.cpp  node.cpp  orbit.cpp  processable.cpp  statistic.cpp  stream.cpp  system.cpp  utils.cpp
tests/: connection_test.py  massif.out.27462  massif.out.27963  model_test.py  model_test_slice.py  test.py  test_float.py  test_inheritance.py  test_ram.py  test_request.py  test_router.py  test_router_reader.py  testp.py
(+11 files in other folders)
